// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge render with content 1`] = `
<div>
  <div
    class="adm-badge-wrapper"
  >
    text
    <div
      class="adm-badge adm-badge-fixed"
    >
      <div
        class="adm-badge-content"
      >
        新
      </div>
    </div>
  </div>
</div>
`;

exports[`Badge render without content 1`] = `
<div
  class="adm-badge"
  data-testid="test-badge"
>
  <div
    class="adm-badge-content"
  >
    123
  </div>
</div>
`;

exports[`Badge renders with color 1`] = `
<div>
  <div
    class="adm-badge-wrapper"
  >
    text
    <div
      class="adm-badge adm-badge-fixed"
      style="--color: #108ee9;"
    >
      <div
        class="adm-badge-content"
      >
        新
      </div>
    </div>
  </div>
</div>
`;

exports[`Badge should apply custom prefixCls(ConfigProvider) 1`] = `
<div>
  <div
    class="config-prefix-badge-wrapper"
  >
    text
    <div
      class="config-prefix-badge config-prefix-badge-fixed"
      style="--color: #108ee9;"
    >
      <div
        class="config-prefix-badge-content"
      >
        新
      </div>
    </div>
  </div>
</div>
`;

exports[`Badge should apply custom prefixCls(component) 1`] = `
<div>
  <div
    class="component-prefix-wrapper"
  >
    text
    <div
      class="component-prefix component-prefix-fixed"
      style="--color: #108ee9;"
    >
      <div
        class="component-prefix-content"
      >
        新
      </div>
    </div>
  </div>
</div>
`;
